[project]
name = 'openmm_csvr'
version = '1.0.0'
dependencies=['numpy','openmm']

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["openmm_csvr*", "scripts*"]

[tool.black]
line-length = 88
exclude = '''
\(
    \.git
  | build
\)
'''

[tool.isort]
profile = "black"
